--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,152 @@
-$primary-color:red;
+@import 'abstracts';
+@import 'components';
+
+/* general setting */
+*, *::after, *::before{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+html{
+    font-size: 10px;
+}
 
 body {
-    background-color: $primary-color;
+    font-family: $secondary-font;
+    color: $text-color;
+    background-color: $light-color;    
+}
+
+.container{
+    max-width: 114rem;
+    margin: 0 auto;
+    font-family: $primary-font;
+
+}
+
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: $primary-font;
+    color: $light-color;
+}
+
+img{
+    width: 100%;
+}
+
+/* Top Header */
+.top-header{
+    border-bottom: 1px solid $primary-color;
+    
+    .container{
+        @include flex-display(flex, center, space-between);
+
+        .logo{
+            h1{
+                font-size: 5rem;
+                font-family: $primary-font;
+                color: $primary-color;
+                text-transform: uppercase;
+            }
+        }
+        .top-social-menu{
+           display: flex;
+           
+           li{
+               margin: 0 1rem;
+               padding: 1rem;
+
+               a{
+                   font-size: 2rem;
+                   transition: all .5s ease-in-out;
+               }
+
+               &:hover a{
+                   color: $primary-color;
+               }
+           }
+        }
+
+        .login-area{
+
+            span{
+                display: none;
+            }
+        }
+    }
+}
+
+/** Nav Header **/
+.nav-header{
+
+    .navbar {
+        @include flex-display(flex, center, space-between);
+
+        .nav-list{
+            display: flex;
+
+            li{
+                line-height: 8rem;
+                position: relative;
+                transition: all .5s;
+
+                .dropdown{
+                    position: absolute;
+                    width: 150%;
+                    left: 20%;
+                    top: 12rem;
+                    transition: all .5s;
+                    opacity: 0;
+                    z-index: 10;
+                    background-color: lighten($secondary-color, 10%);
+
+                    li{
+                        line-height: 4rem;
+                    }
+
+                }
+
+                &:hover{
+                    background-color: $primary-color;
+
+                    & .dropdown{
+                        opacity: 1;
+                        top: 8rem;
+                    }
+                }
+            }
+
+            a{
+                padding: 0 2rem;
+                font-size: 1.6rem;
+                letter-spacing: 2px;
+            }
+            i{
+                margin-right: 2rem;
+                font-size: 1.6rem;
+            }
+        }
+
+        .search-area{
+            input[type="search"], button[type="submit"]{
+             border: none;
+             background-color: transparent;
+             color: $light-color;   
+            }
+            input[type="search"]{
+                border-bottom: 1px solid $primary-color; 
+                padding: .5rem;
+            }
+            button[type="submit"]{
+                margin-left: -1rem;
+            }
+
+        }
+    }
 }
