--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -15,6 +15,7 @@
  $comment-color:#08abbd;
  $text-color: #9f9f9f;
  $light-color:#fefefe;
+ $general-transition: all .5s ease-in-out;
  
 
  /** Utilities **/
@@ -23,8 +24,8 @@
         background-color: $secondary-color;
     }
     &-light{
-        background-color: $light-color;
-    }
+        background-color: $light-color;        
+        }
 }
 
 .ml{
@@ -39,12 +40,29 @@
     }
 }
 
-
-
+.text-light{ color: $light-color; }
+.text-primary{ color: $primary-color; }
+.text-center{ text-align: center; }
 
  /** Mixins **/
  @mixin flex-display( $display, $align-items, $justify-content){
     display: $display;
     align-items: $align-items;
     justify-content:  $justify-content;
+ }
+
+ @mixin  media ($screensize) {
+    @if ($screensize == xlarge){
+        @media(max-width: 1280px){ @content};
+    }
+    @if ($screensize == large){
+         @media(max-width: 992px){ @content};
+     }
+    @if ($screensize == medium){
+        @media(max-width: 768px){ @content};
+    }
+    @if ($screensize == small){
+        @media(max-width: 576px){ @content};
+    }
+
  }
