--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -9,7 +9,7 @@
  /* Variables */
  $primary-font:'Changa', sans-serif;
  $secondary-font:"Open-sans", sans-serif;
- $primary-color:#e51515;
+ $primary-color:#198754;//#e51515
  $secondary-color:#14151a;
  $date-color:#ffb320;
  $comment-color:#08abbd;
